Style: Fix cover art stretching if text is overflowing

--- a/public/static/bssb.scss
+++ b/public/static/bssb.scss
@@ -44,8 +44,6 @@ td.cover-art-cell {
     left: 0;
     right: 0;
     bottom: 0;
-    height: 100%;
-    width: auto;
   }
   > span {
     display: flex;
